# CppCourse

./: README.md
tasks/admission/: admission.cpp
tasks/associative_operation/: associative_operation.cpp
tasks/cow/: CMakeLists.txt  cow_string.cpp  cow_string.h  shared_str.cpp  shared_str.h  test.cpp
tasks/image_processor/: CMakeLists.txt  basic_filter.h  color.h  controller.cpp  controller.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  file_read.cpp  file_read.h  file_write.cpp  file_write.h  fill_controller.cpp  fill_controller.h  grayscale.cpp  grayscale.h  image.cpp  image.h  image_processor.cpp  image_processor_exception.cpp  image_processor_exception.h  matrix_filter.cpp  matrix_filter.h  negative.cpp  negative.h  path_parser.cpp  path_parser.h  sharpening.cpp  sharpening.h
tasks/image_processor/test/: CMakeLists.txt  test.cpp
tasks/mines/: minesweeper.cpp  minesweeper.h  test.cpp
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp
tasks/poly/: poly.cpp  poly.h  test.cpp
tasks/robot/: checkers_topology.cpp  checkers_topology.h  knight_topology.cpp  knight_topology.h  overflow_topology.cpp  overflow_topology.h  planar_topology.cpp  planar_topology.h  point.h  robot.cpp  test.cpp  topology.cpp  topology.h  world.cpp  world.h
tasks/scorer/: scorer.cpp
tasks/scorer2/: scorer.cpp  scorer.h
tasks/search/: search.cpp
tasks/search2/: search.cpp  search.h  test.cpp
tasks/sort_students/: sort_students.cpp
tasks/tests_checking/: tests_checking.cpp
tasks/unixpath/: unixpath.cpp
tasks/unixpath2/: unixpath.cpp  unixpath.h
(+2 files in other folders)
